# flatbuffers-tools

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: gen.rs  lib.rs
